--- a/Northwin.AppMobile/Northwin.AppMobile.Android/Properties/AndroidManifest.xml
+++ b/Northwin.AppMobile/Northwin.AppMobile.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.northwin.appmobile">
     <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
-    <application android:label="Northwin.AppMobile.Android"></application>
+    <application android:label="Northwin.AppMobile.Android"
+                 android:usesCleartextTraffic="true" android:allowBackup="false" android:networkSecurityConfig="@xml/network_security_config"></application>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
